cdk.out/LocalWeatherApiCdkStack3.template.json
{
  "Resources": {
    "localweatherelbLB3A36F314": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "localweatherelbLBSecurityGroup02E6E4CE",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          "subnet-46238c0e",
          "subnet-0402bd62",
          "subnet-2994fe70"
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/LB/Resource"
      }
    },
    "localweatherelbLBSecurityGroup02E6E4CE": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB LocalWeatherApiCdkStack3localweatherelbLBA3032AA9",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": "vpc-4be42e2d"
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/LB/SecurityGroup/Resource"
      }
    },
    "localweatherelbLBSecurityGrouptoLocalWeatherApiCdkStack3localweatherelbServiceSecurityGroupCBD6A03580B56567E0": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "localweatherelbLBSecurityGroup02E6E4CE",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "localweatherelbServiceSecurityGroup5AF0D5F9",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/LB/SecurityGroup/to LocalWeatherApiCdkStack3localweatherelbServiceSecurityGroupCBD6A035:80"
      }
    },
    "localweatherelbLBPublicListener5CBA1DA1": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "localweatherelbLBPublicListenerECSGroup2544E1FE"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "localweatherelbLB3A36F314"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/LB/PublicListener/Resource"
      }
    },
    "localweatherelbLBPublicListenerECSGroup2544E1FE": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": "vpc-4be42e2d"
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "localweatherelbTaskDefTaskRole9DAF5610": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/TaskDef/TaskRole/Resource"
      }
    },
    "localweatherelbTaskDef9C080FE6": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  "574931369507.dkr.ecr.ap-southeast-1.",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/localweather:latest"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "localweatherelbTaskDefwebLogGroup9371B9B9"
                },
                "awslogs-stream-prefix": "localweatherelb",
                "awslogs-region": "ap-southeast-1"
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "localweatherelbTaskDefExecutionRole55ADEC4B",
            "Arn"
          ]
        },
        "Family": "LocalWeatherApiCdkStack3localweatherelbTaskDefC18ED4DF",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "localweatherelbTaskDefTaskRole9DAF5610",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/TaskDef/Resource"
      }
    },
    "localweatherelbTaskDefwebLogGroup9371B9B9": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/TaskDef/web/LogGroup/Resource"
      }
    },
    "localweatherelbTaskDefExecutionRole55ADEC4B": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/TaskDef/ExecutionRole/Resource"
      }
    },
    "localweatherelbTaskDefExecutionRoleDefaultPolicyAEDE648B": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ecr:ap-southeast-1:574931369507:repository/localweather"
                  ]
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "localweatherelbTaskDefwebLogGroup9371B9B9",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "localweatherelbTaskDefExecutionRoleDefaultPolicyAEDE648B",
        "Roles": [
          {
            "Ref": "localweatherelbTaskDefExecutionRole55ADEC4B"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "localweatherelbService9AE88F68": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsDefaultClusterMnL3mNNYNvpc4be42e2d70C76A5E"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 3,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "localweatherelbLBPublicListenerECSGroup2544E1FE"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "localweatherelbServiceSecurityGroup5AF0D5F9",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              "subnet-46238c0e",
              "subnet-0402bd62",
              "subnet-2994fe70"
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "localweatherelbTaskDef9C080FE6"
        }
      },
      "DependsOn": [
        "localweatherelbLBPublicListenerECSGroup2544E1FE",
        "localweatherelbLBPublicListener5CBA1DA1"
      ],
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/Service/Service"
      }
    },
    "localweatherelbServiceSecurityGroup5AF0D5F9": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "LocalWeatherApiCdkStack3/localweatherelb/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": "vpc-4be42e2d"
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/Service/SecurityGroup/Resource"
      }
    },
    "localweatherelbServiceSecurityGroupfromLocalWeatherApiCdkStack3localweatherelbLBSecurityGroupBBC78EA4808B018896": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "localweatherelbServiceSecurityGroup5AF0D5F9",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "localweatherelbLBSecurityGroup02E6E4CE",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/localweatherelb/Service/SecurityGroup/from LocalWeatherApiCdkStack3localweatherelbLBSecurityGroupBBC78EA4:80"
      }
    },
    "EcsDefaultClusterMnL3mNNYNvpc4be42e2d70C76A5E": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/EcsDefaultClusterMnL3mNNYNvpc-4be42e2d/Resource"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAACn1S0U4CMRD8Ft57PU5jfDJRAY0JQXMQ32tZLitHe+luMeTSf7c9DnKoMX3o7uy0M9O0kEVxI8eje/VFmV5v81ZbB7JdstJbUQJZ7zSIyca8em48i4k1xM5rTthpHkQ63oJ2soTGErJ1h0dFIEBT1ihmcIbkQ9PUqBWjNXOr1o+qVkbD+km5SjEswe0xakGtiFHXkfHRMdBU+yvZ/n3aJR8X/ZCHxGB6zqkezFdRGfjZWd8kyqAN0XnUXIL2DvlwpvwPzCoHRL/gF9Ph6U6SbR93pWg7hQ0aTE6O8peINawwOh5gP56qE+rL2sd8XdK+DALVTralrTtit7/ZGP2Q2mMVRG2r6Gluq3OiUx1CEFPLC+D8WhayuM3lYraaxO8RXzB7B0fR0d0+zvJCjtMafRJi5rxh3IEsj/s3CpR/XmICAAA="
      },
      "Metadata": {
        "aws:cdk:path": "LocalWeatherApiCdkStack3/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "localweatherelbLoadBalancerDNSCA2BEA81": {
      "Value": {
        "Fn::GetAtt": [
          "localweatherelbLB3A36F314",
          "DNSName"
        ]
      }
    },
    "localweatherelbServiceURL8FF8BC04": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "localweatherelbLB3A36F314",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  }
}
